# LiliaCode

./: .gitignore  .gitmodules  AGENTS.md  DESIGN.md  README.md  README.zh-CN.md  package.json  tsconfig.base.json  tsconfig.node-scripts.json
.agents/skills/lilia-agent-debug/: SKILL.md
.agents/skills/lilia-app-boundary/: SKILL.md
.agents/skills/lilia-app-coding/: SKILL.md
.agents/skills/lilia-app-design/: SKILL.md
.agents/skills/lilia-app-validation/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/remote-core/: build.gradle.kts
apps/android/voice-app/: build.gradle.kts
apps/desktop/: agent-runner.mjs  claude-history.mjs  codex-account-quota.mjs  codex-history.mjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/agent-debug/: dev-server.mjs  verify-agent-debug.mjs  verify-task-handoff-e2e.mjs
apps/desktop/agent-runner/: architecture.mjs  askUser.mjs  claudePlan.mjs  claudeStream.mjs  conversationContext.mjs  core.mjs  dryRun.mjs  interactions.mjs  planApproval.mjs  prompt.mjs  promptManager.mjs  protocol.mjs  providerOptions.mjs  quotaUsage.mjs  (+6 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: agent_debug.rs  agent_events.rs  agent_extensions.rs  agent_interaction_contract.rs  agent_timeline.rs  agent_timeline_contract.rs  app_commands.rs  app_delivery.rs  app_events_contract.rs  automation.rs  chat_backends_contract.rs  cli_project.rs  codex_iab.rs  contract_manifest.rs  conversation_suggestions.rs  github.rs  github_command_contract.rs  history_import.rs  history_import_contract.rs  lib.rs  lilia_iab.rs  main.rs  memory.rs  memory_command_contract.rs  milestone_command_contract.rs  plugins.rs  plugins_command_contract.rs  popup_windows.rs  process_command.rs  project_architecture_contract.rs  project_contract.rs  project_shell.rs  projects_tasks.rs  prompt_contract.rs  provider.rs  quota_usage.rs  quota_usage_contract.rs  remote_control.rs  runner_protocol_contract.rs  settings_store.rs  (+11 more)
apps/desktop/src-tauri/src/automation/: commands.rs  contract.rs  node_handlers.rs  repository.rs  signals.rs  types.rs
apps/desktop/src-tauri/src/chat/: attachments.rs  auto_turn_decision.rs  command_contract.rs  commands.rs  contract.rs  mod.rs  model_selection_contract.rs  mutsuki_core_runtime.rs  nanobot_runtime.rs  process_registry.rs  runner.rs  slash_commands.rs  state.rs  tests.rs  timeline_sink.rs  title_update.rs  types.rs  workflow.rs  workflow_contract.rs
apps/desktop/src-tauri/src/chat/attachments/: describe.rs  mod.rs
apps/desktop/src-tauri/src/chat/mutsuki_core_runtime/: diagnostic.rs
apps/desktop/src-tauri/src/chat/nanobot_runtime/: diagnostic.rs
apps/desktop/src-tauri/src/claude_history/: mod.rs  types.rs  utility.rs
apps/desktop/src-tauri/src/codex_history/: bulk.rs  mod.rs  preview.rs  types.rs  utility.rs
apps/desktop/src-tauri/src/conversation_suggestions/: cache.rs  claude_native.rs  codex_thread.rs  command_contract.rs  contract.rs  generation.rs  github_context.rs  local_git.rs  mod.rs  model.rs  scope.rs  tests.rs  types.rs
apps/desktop/src-tauri/src/plugins/: claude_mcp.rs  claude_plugins.rs  claude_skills.rs  codex_mcp.rs  commands.rs  hooks.rs  mod.rs  paths.rs  runtime.rs  types.rs
apps/desktop/src-tauri/src/projects_tasks/: architecture_commands.rs  events.rs  milestone_commands.rs  mod.rs  ordering.rs  project_commands.rs  queries.rs  relations.rs  task_commands.rs  types.rs
apps/desktop/src-tauri/src/provider/: agent_interaction_defaults_contract.rs  assistant_ai.rs  codex_probe.rs  codex_spark.rs  codex_update.rs  command_contract.rs  commands.rs  config.rs  config_contract.rs  connection.rs  credentials.rs  mod.rs  subagents.rs  types.rs
apps/desktop/src-tauri/src/store/: migrations.rs  schema.rs
apps/desktop/src-tauri/src/todos/: agent_sync.rs  commands.rs  contract.rs  mod.rs  repository.rs  types.rs
apps/desktop/src-tauri/windows/: hooks.nsh
docs/design/: agent-debug-harness.md  android-remote-control.md  claude-code-interface.md  codex-experimental-app-server.md  frontend-interaction-lifecycle.md  global-automations.md  lilia-agent-interface.md  lilia-history-import.md  memory.md  style-standard.md  timeline-display.md
docs/github/: phase-roadmap.md  release-template.md
docs/guide/: development.md  features.md  product.md  roadmap.md
scripts/: android-apk-inspect.mjs  android-doctor.mjs  android-smoke-lib.mjs  android-smoke-lib.test.mjs  android-smoke.mjs  build-iroh-android.ps1  check-desktop-bundle.mjs  check-toolchain.ts  generate-icon.ps1  generate-icons.mjs  lilia-ui-deps.mjs  report-desktop-bundle.mjs  setup-android-env.ps1  tauri-dev.mjs  tauri-install.mjs  verify-release.mjs  windows-installer-smoke.mjs  with-rust-cache.mjs
(+447 files in other folders)
