[package]
name = "lilia"
version = "0.1.0"
description = "Lilia · 一个把 Claude Code 会话当作任务管理的桌面客户端"
authors = ["Sena"]
edition = "2021"

[lib]
name = "lilia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.25"
base64 = "0.22"
clipboard-win = "5.4"
# lilia-store：SQLite 持久化层。bundled 让 rusqlite 自带 SQLite，
# 不依赖系统库，Windows 上免去 vcpkg/sqlite3 安装步骤。
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
ignore = "0.4"
# 辅助模型连通性测试（GET {baseUrl}/models）的极简同步 HTTP 客户端。
# rustls-tls：避免依赖 OpenSSL；blocking：用在 Tauri command 同步上下文里，无需引入 tokio。
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
