[package]
name = "lilia"
version = "1.0.0-beta.1"
description = "Lilia · 一个把 Claude Code 会话当作任务管理的桌面客户端"
authors = ["Sena"]
edition = "2021"

[lib]
name = "lilia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
agent-debug-webdriver = ["dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["protocol-asset", "image-png", "tray-icon"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2.4.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-wdio-webdriver = { version = "1", optional = true }
mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "1787ab5c6d9aee9982505d0686d6c2e03547275e" }
mutsuki-tauri-host = { git = "https://github.com/sena-nana/MutsukiTauriHost.git", rev = "af169aaf7f13c9da0cbbe1214ac97432f6a259e0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml_edit = "0.25.12"
base64 = "0.22.1"
clipboard-win = "5.4.1"
# lilia-store：SQLite 持久化层。bundled 让 rusqlite 自带 SQLite，
# 不依赖系统库，Windows 上免去 vcpkg/sqlite3 安装步骤。
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.34.0"
dirs = "6.0.0"
uuid = { version = "1.23.4", features = ["v4"] }
ignore = "0.4.26"
# Tauri command 中的同步 HTTP 客户端，用于模型连通性测试和 GitHub API。
# rustls：避免依赖 OpenSSL；form/query：GitHub OAuth 与分页请求需要。
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "form", "json", "query", "rustls"] }
flate2 = "1.1.9"
sha2 = "0.11.0"
tar = "0.4.44"
keyring = "4.1.2"

[target.'cfg(windows)'.dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
raw-window-handle = "0.6.2"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Power",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
incremental = false
